remodelando la pag

--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <header class="caja-1">
+    <header>
 
         <div class="header1">
 
@@ -58,6 +58,7 @@
 
     <main class="caja-2" id="loginUser">
         <img id="banner" src="/img/img-home-banner.jpg" alt="Banner publicidad">
+
         <!--  Contenido principal -->
         <div class="login">
             <form action="/login" method="post">
@@ -74,9 +75,9 @@
     </main>
 
     <!-- Pié de página -->
-    <footer>
+     <footer>
         <div class="style-footer">
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-credit-card" id="iconFooter"></i>
                     <h4> Pagá con tarjeta o en efectivo</h4>
                     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
@@ -84,7 +85,7 @@
                         seguro!</p>
                 </div>
             </section>
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-gift" id="iconFooter"></i>
                     <h4> Envío gratis desde los $2.500</h4>
                     <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
@@ -92,19 +93,19 @@
                         Mercado Puntos.</p>
                 </div>
             </section>
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-user-shield" id="iconFooter"></i>
                     <h4> Seguridad de principio a fin</h4>
                     <p> ¿No te gusta?¡Devolvelo! En Mercado Liebre no hay nada que no puedas hacer porque estás siempre
                         protegid@.</p>
                 </div>
             </section>
-            <section id="sectionFooter">
-                <div class="footer_Div">
-                    <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
-                </div>
-            </section>
         </div>
+        <section id="sectionFooter">
+            <div class="footer_Div">
+                <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
+            </div>
+        </section>
     </footer>
 
 </body>
