--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,11 +10,11 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   background-color: rgba(222, 221, 230, 0.795);
-  width: 100%;
+  max-width: 100vw;
 }
 
 #logo {
-  width: 80%;
+  width: 200px;
 }
 
 #banner {
@@ -33,14 +33,15 @@ header {
   background-color: rgb(255, 241, 89);
   color: #5a5a5a;
   padding: 12px;
-  top: 0;
-  position: fixed;
-  width: 100%;
-  margin: auto;
+
+  width: 100vw;
 }
 
-.caja-1 {
-  z-index: 10;
+h2 {
+  font-size: 18px;
+  padding: 17px;
+  display: block;
+  text-align: center;
 }
 
 .header1 {
@@ -50,23 +51,7 @@ header {
 .buyPhrase {
   font-family: 'Roboto', sans-serif;
   color: black;
-  font-style:normal;
-}
-
-.navBar {
-  color: rgb(20, 12, 87);
-}
-
-a{
-  text-decoration: none;
-}
-
-#letras-navBar:hover {
-  color: rgb(54, 138, 248);
-}
-
-.navBar ul .left .right {
-  color: rgb(20, 12, 87);
+  font-style: normal;
 }
 
 #banner {
@@ -74,43 +59,69 @@ a{
   padding: 0px;
 }
 
-/* Cuerpo de la página */
-main {
-  margin: 0px;
-  flex-wrap: wrap;
-}
-
-main .caja-2 {
-  z-index: 9;
-}
-
-main #productsML {
-  background-color: rgb(230, 224, 224);
-  width: 100%;
-  padding: 0px;
-  box-sizing: border-box;
-  margin: 0 auto;
+header div.burger-menu {
+  background-color: rgb(135, 185, 252);
+  color: rgba(253, 249, 249, 0.973);
+  display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  height: 30px;
+  width: 30px;
+  margin: auto;
+  border-radius: 10%;
+  margin-bottom: 10px;
+}
+
+img#banner {
+  display: block;
+  width: 100vw;
+}
+
+/*----------------------------------------------------------------------------------*/
+
+/* Cuerpo de la página */
+
+/* main {
+  margin: 0px;
+  display: flex;
+ */
+
+main#productsML {
+  background-color: rgb(192, 192, 192);
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section {
-  width: 70%;
-  margin: auto;
+  width: 100%;
   padding: 6px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.style-article {
+section div.products-list {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+article.style-article {
   background-color: white;
   color: rgb(10, 6, 39);
   text-align: center;
   margin-bottom: 10px;
   padding: 15px;
   border-radius: 8px;
-  line-height: 20px;
   border: solid 1px #ebebeb;
-  margin: 10px;
+
+  /* AGREGADO*/
+  width: 200px;
 }
 
 .style-article:hover {
@@ -120,8 +131,11 @@ section {
 .product-image {
   display: block;
   margin: auto;
-  height: auto;
   margin-bottom: 10px;
+}
+
+.product-image img {
+  width: 100px;
 }
 
 .product-description {
@@ -129,7 +143,7 @@ section {
   padding: 15px;
   display: block;
   text-align: left;
-  margin: 0;
+  position: relative;
 }
 
 .product-description .logoTruck {
@@ -142,9 +156,9 @@ section {
   color: rgb(9, 184, 9);
   background-color: #fff;
   border-radius: 50%;
-  position: relative;
-  left: 90%;
-  top: 20px;
+  position: absolute;
+  right: 10px;
+  top: -15px;
 }
 
 .logoTruck:hover {
@@ -184,16 +198,27 @@ h3 {
 }
 
 /* PIE DE PÁGINA */
+
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   background-color: #fff;
-  width: 100%;
+  width: 100vw;
   padding: 2px;
+}
+
+footer div.style-footer {
+  width: 90%;
+  margin-bottom: 20px;
+  display: flex;
   flex-wrap: wrap;
-  margin: 15px;
+  justify-content: space-evenly;
+}
+
+footer div.style-footer section.sectionFooter {
+  width: 250px;
 }
 
 footer #iconFooter {
@@ -209,10 +234,9 @@ footer p {
   font-style: italic;
 }
 
-
 /*----------------------------------------------------Smartphones----------------------------------------------------- */
 @media (max-width: 400px) {
-  header .caja-1 {
+  header {
     display: block;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -255,28 +279,18 @@ footer p {
     font-size: 17px;
   }
 
-  .navBar .left .right {
-    content: none;
+  .nav.navBar {
+    display: none;
   }
 
   #banner {
     display: none;
   }
 
-  main .caja-2 {
-    margin-top: 201px;
-  }
-
   h3 {
     font-size: 1rem;
   }
 
-  footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
 
   footer h4 {
     font-size: 12px;
@@ -297,15 +311,11 @@ footer p {
 /* ------------------------------------------------- Tablets----------------------------------------------------------*/
 @media screen and (min-width: 401px) and (max-width:768px) {
 
-  header .caja-1 {
+  header {
     display: block;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 300px;
-  }
-
-  .caja-2 {
-    margin-top: 240px;
   }
 
   #buscar {
@@ -353,15 +363,11 @@ footer p {
     list-style: none;
   }
 
-  main .caja-2 {
-    margin-top: 326px;
-  }
-
   h3 {
     font-size: 1rem;
   }
 
-  .style-article {
+  article.style-article {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -369,25 +375,16 @@ footer p {
     margin: 2px;
   }
 
-  .style-article {
+  article.style-article {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
   }
 
   section {
-    flex-basis: 50%;
     /* Mostrar solo 2 elementos por fila en tablets */
     max-width: 50%;
-    box-sizing: border-box;
     padding: 15px;
     margin-bottom: 10px;
     transition: box-shadow 0.2s;
-  }
-
-  footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
   }
 
   footer h4 {
@@ -404,20 +401,15 @@ footer p {
     flex-wrap: wrap;
   }
 
-
 }
 
 /*-------------------------------------------------------- Desktops---------------------------------------------------*/
 @media screen and (min-width: 769px) {
-  header .caja-1 {
+  header{
     display: block;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 400px;
-  }
-
-  .caja-2 {
-    margin-top: 100px;
   }
 
   .header1 {
@@ -434,7 +426,6 @@ footer p {
     margin: 5px;
     display: flex;
     max-width: 300px;
-
   }
 
   #searchIcon {
@@ -454,6 +445,22 @@ footer p {
   }
 
   .navBar {
+    color: rgb(20, 12, 87);
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  #letras-navBar:hover {
+    color: rgb(54, 138, 248);
+  }
+
+  .navBar ul .left .right {
+    color: rgb(20, 12, 87);
+  }
+
+  .navBar {
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -468,20 +475,14 @@ footer p {
     margin: 0 10px;
   }
 
-  .iconMenu {
-    display: none;
-  }
-
   .burger-menu {
     display: none;
   }
 
   section {
-    box-sizing: border-box;
     width: 80%;
     display: flex;
     padding: 15px;
-    flex-wrap: wrap;
     margin: 10px;
   }
 
@@ -602,14 +603,14 @@ footer p {
     text-align: left;
     margin-right: 8px;
     display: inline;
-    list-style:none;
+    list-style: none;
   }
 
   .intereses {
     display: inline-block;
     margin-right: 10px;
     text-align: left;
-    list-style:none;
+    list-style: none;
   }
 
   .perfil,
@@ -620,7 +621,7 @@ footer p {
 
   .intereses ul {
     display: inline;
-    list-style:none;
+    list-style: none;
   }
 
   .button_styles {
