--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     <!-- Metadatos: Datos referentes al funcionamiento de la página -->
     <meta charset="UTF-8">
     <title> Mercado Liebre </title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,16 +20,17 @@
 
 <body>
 
-    <header class="caja-1">
+    <header>
 
         <div class="header1">
-        
-                <a href="/">
-                    <img id="logo" src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
-                </a>
+
+            <a href="/">
+                <img id="logo" src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+            </a>
 
             <form id="buscar" class="buscar-form">
-                <input type="text" id="searchIcon" placeholder="Buscar productos, marcas..."></input><br><button type="submit"><i class="fas fa-search" id="searchButton"></i></button>
+                <input type="text" id="searchIcon" placeholder="Buscar productos, marcas..."></input><br><button
+                    type="submit"><i class="fas fa-search" id="searchButton"></i></button>
             </form>
             <div class="buyPhrase"> <i id="logoPay" class="fa-solid fa-comments-dollar"></i> Comprá en cuotas y sin
                 tarjeta de crédito </div>
@@ -48,7 +49,8 @@
             </ul>
 
             <ul class="right">
-                <li><a href="/register" target="_blank" id="letras-navBar"> Creá tu cuenta <i class="fa-regular fa-address-card"></i></a>
+                <li><a href="/register" target="_blank" id="letras-navBar"> Creá tu cuenta <i
+                            class="fa-regular fa-address-card"></i></a>
                 <li><a href="/login" id="letras-navBar"> Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li><a href="" id="letras-navBar"> Mis compras <i class="fa-solid fa-bag-shopping"></i> </a></li>
             </ul>
@@ -61,145 +63,155 @@
 
     <!--  Contenido principal -->
 
-    <main class="caja-2" id="productsML">
+    <main>
         <img id="banner" src="/img/img-home-banner.jpg" alt="Banner publicidad">
-        
+
         <!-- SECCION PRODUCTOS DE TU INTERÉS -->
 
-        <h2> Basado en tu última visita </h2>
-        <section class="art-interest-client">
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-cafetera-moulinex.jpg" alt="cafetera" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $6.770 </p>
-                        <p id="discount"> 40% OFF </p>
-                    </div>
-                    <h3> Cafetera Moulinex </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+        <!-- <section class="art-interest-client"> -->
+        <section>
+            <h2> Basado en tu última visita </h2>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $230.000 </p>
-                        <p id="discount"> 20% OFF </p>
+            <div class="products-list">
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="cafetera">
                     </div>
-                    <h3> MacBook Pro 2019 </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $6.770 </p>
+                            <p id="discount"> 40% OFF </p>
+                        </div>
+                        <h3> Cafetera Moulinex </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price">$70.500 </p>
-                        <p id="discount">10% OFF </p>
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook">
                     </div>
-                    <h3> Samsung Galaxy S10 </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $230.000 </p>
+                            <p id="discount"> 20% OFF </p>
+                        </div>
+                        <h3> MacBook Pro 2019 </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTV" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $23.000 </p>
-                        <p id="discount"> 5% OFF </p>
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy">
                     </div>
-                    <h3> SmartTv Samsung 43" </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price">$70.500 </p>
+                            <p id="discount">10% OFF </p>
+                        </div>
+                        <h3> Samsung Galaxy S10 </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
+
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTV">
+                    </div>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $23.000 </p>
+                            <p id="discount"> 5% OFF </p>
+                        </div>
+                        <h3> SmartTv Samsung 43" </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
+            </div>
+
         </section>
 
         <!-- SECCION OFERTAS -->
 
-        <h2> Ofertas </h2>
-        <section class="offers">
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $6.770 </p>
-                        <p id="discount"> 40% OFF </p>
-                    </div>
-                    <h3> Cafetera Moulinex </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+        <section>
+            <h2> Ofertas </h2>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-macbook-pro-2019.jpg" alt="imagen de MacBook" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $230.000 </p>
-                        <p id="discount"> 20% OFF </p>
+            <div class="products-list">
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="imagen de la cafetera">
                     </div>
-                    <h3> MacBook Pro 2019 </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $6.770 </p>
+                            <p id="discount"> 40% OFF </p>
+                        </div>
+                        <h3> Cafetera Moulinex </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-samsung-galaxy-s10.jpg" alt="imagen del Samsung Galaxy" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $70.500 </p>
-                        <p id="discount"> 10% OFF </p>
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="imagen de MacBook">
                     </div>
-                    <h3> Samsung Galaxy S10 </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $230.000 </p>
+                            <p id="discount"> 20% OFF </p>
+                        </div>
+                        <h3> MacBook Pro 2019 </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
 
-            <article class="style-article">
-                <div class="product-image">
-                    <img src="/img/img-tv-samsung-smart.jpg" alt="imagen del SmartTv" width="70%">
-                </div>
-                <div class="product-description">
-                    <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
-                    <br>
-                    <div class="price-discount">
-                        <p id="price"> $23.200 </p>
-                        <p id="discount"> 5% OFF </p>
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="imagen del Samsung Galaxy">
                     </div>
-                    <h3> SmartTv Samsung 43" </h3>
-                    <a href="/detalle" id="seeMore"> Ver más </a>
-                </div>
-            </article>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $70.500 </p>
+                            <p id="discount"> 10% OFF </p>
+                        </div>
+                        <h3> Samsung Galaxy S10 </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
+
+                <article class="style-article">
+                    <div class="product-image">
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="imagen del SmartTv">
+                    </div>
+                    <div class="product-description">
+                        <div class="logoTruck"><i class="fa-solid fa-truck"></i></div>
+                        <br>
+                        <div class="price-discount">
+                            <p id="price"> $23.200 </p>
+                            <p id="discount"> 5% OFF </p>
+                        </div>
+                        <h3> SmartTv Samsung 43" </h3>
+                        <a href="/detalle" id="seeMore"> Ver más </a>
+                    </div>
+                </article>
+            </div>
+
+
         </section>
 
     </main>
@@ -208,7 +220,7 @@
 
     <footer>
         <div class="style-footer">
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-credit-card" id="iconFooter"></i>
                     <h4> Pagá con tarjeta o en efectivo</h4>
                     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
@@ -216,7 +228,7 @@
                         seguro!</p>
                 </div>
             </section>
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-gift" id="iconFooter"></i>
                     <h4> Envío gratis desde los $2.500</h4>
                     <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
@@ -224,19 +236,19 @@
                         Mercado Puntos.</p>
                 </div>
             </section>
-            <section id="sectionFooter">
+            <section class="sectionFooter">
                 <div class="footer_Div"> <i class="fa-solid fa-user-shield" id="iconFooter"></i>
                     <h4> Seguridad de principio a fin</h4>
                     <p> ¿No te gusta?¡Devolvelo! En Mercado Liebre no hay nada que no puedas hacer porque estás siempre
                         protegid@.</p>
                 </div>
             </section>
-            <section id="sectionFooter">
-                <div class="footer_Div">
-                    <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
-                </div>
-            </section>
         </div>
+        <section id="sectionFooter">
+            <div class="footer_Div">
+                <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
+            </div>
+        </section>
     </footer>
 
 </body>
