css de home terminado

--- a/views/register.html
+++ b/views/register.html
@@ -57,11 +57,13 @@
                 <li><a href="/login" id="letras-navBar"> Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li><a href="" id="letras-navBar"> Mis compras <i class="fa-solid fa-bag-shopping"></i> </a></li>
             </ul>
+    
         </nav>
 
     </header>
 
-    <main>
+
+    <main id="#formulario_Register">
 
         <img id="banner" src="/img/img-home-banner.jpg" alt="Banner publicidad">
 
