css del login y register mejorados

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     <!-- Metadatos: Datos referentes al funcionamiento de la página -->
     <meta charset="UTF-8">
     <title> Mercado Liebre </title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
