--- a/views/register.html
+++ b/views/register.html
@@ -57,13 +57,13 @@
                 <li><a href="/login" id="letras-navBar"> Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li><a href="" id="letras-navBar"> Mis compras <i class="fa-solid fa-bag-shopping"></i> </a></li>
             </ul>
-    
+
         </nav>
 
     </header>
 
 
-    <main id="#formulario_Register">
+    <main id="formulario_Register">
 
         <img id="banner" src="/img/img-home-banner.jpg" alt="Banner publicidad">
 
@@ -92,15 +92,15 @@
             <h2> Perfil del Usuario </h2>
 
             <p> ¿Qué deseas hacer? </p>
-            <div class="perfil">
-                <ul>
-                    <li><input type="radio" id="comprar" name="perfil_usuario" value="comprar" required>
-                        <label for="comprar"> Comprar </label>
-                    </li>
-                    <li><input type="radio" id="vender" name="perfil_usuario" value="vender" required>
-                        <label for="vender"> Vender </label>
-                    </li>
-                </ul>
+            <div id="perfil">
+
+                <input type="radio" id="comprar" name="perfil_usuario" value="comprar" required>
+                <label for="comprar"> Comprar </label>
+
+                <input type="radio" id="vender" name="perfil_usuario" value="vender" required>
+                <label for="vender"> Vender </label>
+                <!-- </li>
+                </ul> -->
             </div>
 
             <p>Selecciona los temas que te interesan</p>
