--- a/views/login.html
+++ b/views/login.html
@@ -56,7 +56,7 @@
 
     </header>
 
-    <main class="caja-2" id="loginUser">
+    <main>
         <img id="banner" src="/img/img-home-banner.jpg" alt="Banner publicidad">
 
         <!--  Contenido principal -->
